removing wrong code

--- a/NeuralNetworks.ipynb
+++ b/NeuralNetworks.ipynb
@@ -26,43 +26,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging csv files for IDS2017 (not sure if it works)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "No objects to concatenate",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-1a0a0d1d84b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#combine all files in the list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mcombined_csv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_files\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#export to csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mcombined_csv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"data/combined_csv.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8-sig'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib64/python3.9/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    269\u001b[0m     \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIndexes\u001b[0m \u001b[0mhave\u001b[0m \u001b[0moverlapping\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m     \"\"\"\n\u001b[0;32m--> 271\u001b[0;31m     op = _Concatenator(\n\u001b[0m\u001b[1;32m    272\u001b[0m         \u001b[0mobjs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    273\u001b[0m         \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib64/python3.9/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    328\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 329\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No objects to concatenate\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    330\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: No objects to concatenate"
-     ]
-    }
-   ],
-   "source": [
-    "import os, glob\n",
-    "\n",
-    "all_files = glob.glob(os.path.join(\"data/\", \"*.csv\"))\n",
-    "\n",
-    "#combine all files in the list\n",
-    "combined_csv = pd.concat([pd.read_csv(f, header=1) for f in all_files ])\n",
-    "#export to csv\n",
-    "combined_csv.to_csv( \"data/combined_csv.csv\", index=False, encoding='utf-8-sig')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data Preprocessing\n",
     "Define a data loading function, categorical variables are converted into numerical using categorical codes."
    ]
@@ -478,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +563,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Destination Port</th>\n",
        "      <th>Flow Duration</th>\n",
        "      <th>Total Fwd Packets</th>\n",
@@ -610,6 +572,7 @@
        "      <th>Fwd Packet Length Max</th>\n",
        "      <th>Fwd Packet Length Min</th>\n",
        "      <th>Fwd Packet Length Mean</th>\n",
+       "      <th>Fwd Packet Length Std</th>\n",
        "      <th>...</th>\n",
        "      <th>act_data_pkt_fwd</th>\n",
        "      <th>min_seg_size_forward</th>\n",
@@ -626,88 +589,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018333</td>\n",
-       "      <td>443</td>\n",
-       "      <td>118004</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>507</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>203</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50.7000</td>\n",
+       "      <td>53</td>\n",
+       "      <td>61111</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>86</td>\n",
+       "      <td>242</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43.000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>43388</td>\n",
-       "      <td>80</td>\n",
-       "      <td>115936324</td>\n",
-       "      <td>16</td>\n",
-       "      <td>14</td>\n",
-       "      <td>295</td>\n",
-       "      <td>484</td>\n",
-       "      <td>295</td>\n",
+       "      <td>46204</td>\n",
+       "      <td>98494956</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11595</td>\n",
+       "      <td>363</td>\n",
+       "      <td>5792</td>\n",
        "      <td>0</td>\n",
-       "      <td>18.4375</td>\n",
+       "      <td>1449.375</td>\n",
+       "      <td>1895.881019</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>32</td>\n",
-       "      <td>41899.81818</td>\n",
-       "      <td>27615.07492</td>\n",
-       "      <td>124255</td>\n",
-       "      <td>29567</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>8239.661868</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>9997706</td>\n",
+       "      <td>12899.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>12899</td>\n",
+       "      <td>12899</td>\n",
+       "      <td>98500000.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>98500000</td>\n",
+       "      <td>98500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1036026</td>\n",
-       "      <td>8080</td>\n",
-       "      <td>72559</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>210</td>\n",
-       "      <td>134</td>\n",
-       "      <td>198</td>\n",
+       "      <td>80</td>\n",
+       "      <td>115922437</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>432</td>\n",
+       "      <td>1387</td>\n",
+       "      <td>432</td>\n",
        "      <td>0</td>\n",
-       "      <td>52.5000</td>\n",
+       "      <td>27.000</td>\n",
+       "      <td>108.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>48580.54545</td>\n",
+       "      <td>38714.87785</td>\n",
+       "      <td>165310</td>\n",
+       "      <td>36826</td>\n",
+       "      <td>10200000.0</td>\n",
+       "      <td>60904.78647</td>\n",
+       "      <td>10200000</td>\n",
+       "      <td>10000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1250142</td>\n",
        "      <td>53</td>\n",
-       "      <td>302</td>\n",
+       "      <td>255</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>74</td>\n",
-       "      <td>106</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37.0000</td>\n",
+       "      <td>96</td>\n",
+       "      <td>180</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48.000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>20</td>\n",
@@ -716,86 +679,86 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1664805</td>\n",
-       "      <td>80</td>\n",
-       "      <td>84561068</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>378</td>\n",
-       "      <td>11595</td>\n",
-       "      <td>366</td>\n",
-       "      <td>0</td>\n",
-       "      <td>75.6000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>53</td>\n",
+       "      <td>199</td>\n",
        "      <td>2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>11010.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>11010</td>\n",
-       "      <td>11010</td>\n",
-       "      <td>84400000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80</td>\n",
+       "      <td>336</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40.000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>84400000</td>\n",
-       "      <td>84400000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 79 columns</p>\n",
+       "<p>5 rows × 78 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0   Destination Port   Flow Duration   Total Fwd Packets  \\\n",
-       "0     2018333                443          118004                  10   \n",
-       "1       43388                 80       115936324                  16   \n",
-       "2     1036026               8080           72559                   4   \n",
-       "3     1250142                 53             302                   2   \n",
-       "4     1664805                 80        84561068                   5   \n",
+       "    Destination Port   Flow Duration   Total Fwd Packets  \\\n",
+       "0                 53           61111                   2   \n",
+       "1              46204        98494956                   8   \n",
+       "2                 80       115922437                  16   \n",
+       "3                 53             255                   2   \n",
+       "4                 53             199                   2   \n",
        "\n",
        "    Total Backward Packets  Total Length of Fwd Packets  \\\n",
-       "0                        8                          507   \n",
-       "1                       14                          295   \n",
-       "2                        3                          210   \n",
-       "3                        2                           74   \n",
-       "4                        7                          378   \n",
+       "0                        2                           86   \n",
+       "1                        5                        11595   \n",
+       "2                       14                          432   \n",
+       "3                        2                           96   \n",
+       "4                        2                           80   \n",
        "\n",
        "    Total Length of Bwd Packets   Fwd Packet Length Max  \\\n",
-       "0                          4200                     203   \n",
-       "1                           484                     295   \n",
-       "2                           134                     198   \n",
-       "3                           106                      37   \n",
-       "4                         11595                     366   \n",
+       "0                           242                      43   \n",
+       "1                           363                    5792   \n",
+       "2                          1387                     432   \n",
+       "3                           180                      48   \n",
+       "4                           336                      40   \n",
        "\n",
-       "    Fwd Packet Length Min   Fwd Packet Length Mean  ...   act_data_pkt_fwd  \\\n",
-       "0                       0                  50.7000  ...                  4   \n",
-       "1                       0                  18.4375  ...                  1   \n",
-       "2                       0                  52.5000  ...                  3   \n",
-       "3                      37                  37.0000  ...                  1   \n",
-       "4                       0                  75.6000  ...                  2   \n",
+       "    Fwd Packet Length Min   Fwd Packet Length Mean   Fwd Packet Length Std  \\\n",
+       "0                      43                   43.000                0.000000   \n",
+       "1                       0                 1449.375             1895.881019   \n",
+       "2                       0                   27.000              108.000000   \n",
+       "3                      48                   48.000                0.000000   \n",
+       "4                      40                   40.000                0.000000   \n",
        "\n",
-       "    min_seg_size_forward  Active Mean   Active Std   Active Max   Active Min  \\\n",
-       "0                     32      0.00000      0.00000            0            0   \n",
-       "1                     32  41899.81818  27615.07492       124255        29567   \n",
-       "2                     20      0.00000      0.00000            0            0   \n",
-       "3                     20      0.00000      0.00000            0            0   \n",
-       "4                     20  11010.00000      0.00000        11010        11010   \n",
+       "   ...   act_data_pkt_fwd   min_seg_size_forward  Active Mean   Active Std  \\\n",
+       "0  ...                  1                     20      0.00000      0.00000   \n",
+       "1  ...                  5                     32  12899.00000      0.00000   \n",
+       "2  ...                  1                     32  48580.54545  38714.87785   \n",
+       "3  ...                  1                     20      0.00000      0.00000   \n",
+       "4  ...                  1                     40      0.00000      0.00000   \n",
        "\n",
-       "    Idle Mean     Idle Std   Idle Max   Idle Min  \n",
-       "0         0.0     0.000000          0          0  \n",
-       "1  10000000.0  8239.661868   10000000    9997706  \n",
-       "2         0.0     0.000000          0          0  \n",
-       "3         0.0     0.000000          0          0  \n",
-       "4  84400000.0     0.000000   84400000   84400000  \n",
+       "    Active Max   Active Min   Idle Mean     Idle Std   Idle Max   Idle Min  \n",
+       "0            0            0         0.0      0.00000          0          0  \n",
+       "1        12899        12899  98500000.0      0.00000   98500000   98500000  \n",
+       "2       165310        36826  10200000.0  60904.78647   10200000   10000000  \n",
+       "3            0            0         0.0      0.00000          0          0  \n",
+       "4            0            0         0.0      0.00000          0          0  \n",
        "\n",
-       "[5 rows x 79 columns]"
+       "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,14 +770,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2120907, 79)\n"
+      "(2120907, 78)\n"
      ]
     }
    ],
@@ -824,20 +787,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on training set: 86.427741%\n",
-      "Precision on training set: 88.077754%\n",
-      "Recall on training set: 35.852869%\n",
-      "F measure on training set: 50.961419%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = train_clf((train_data), train_labels)\n"
    ]
