testing for each day

--- a/NeuralNetworks.ipynb
+++ b/NeuralNetworks.ipynb
@@ -7,7 +7,7 @@
     "# Implementation of Neural Network Classification on NSL-KDD Dataset\n",
     "Using Method Described in *\"Traffic Analysis Based Identification of Attacks\"* found [here](http://cecs.louisville.edu/ry/Traffic.pdf).\n",
     "\n",
-    "Uses scikit-learn MLP learner to classify [NSL-KDD dataset](http://www.unb.ca/cic/research/datasets/nsl.html) and analyze results."
+    "Uses scikit-learn MLP learner to classify [IDS-2017 dataset](https://www.unb.ca/cic/datasets/ids-2017.html) and analyze results."
    ]
   },
   {
@@ -839,6 +839,9 @@
     }
    ],
    "source": [
+    "#Following line to train on a smaller dataset:\n",
+    "#train_data = train_data[::10,:]\n",
+    "\n",
     "clf = train_clf(train_data, train_labels)\n"
    ]
   },
@@ -1144,7 +1147,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Not used"
+    "## Testing over each day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [  \"Monday-WorkingHours.pcap_ISCX.csv\", \"Tuesday-WorkingHours.pcap_ISCX.csv\",\n",
+    "\"Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv\",  \"Wednesday-workingHours.pcap_ISCX.csv\",\n",
+    "\"Thursday-WorkingHours-Afternoon-Infilteration.pcap_ISCX.csv\",  \"Friday-WorkingHours-Morning.pcap_ISCX.csv\",\n",
+    "\"Friday-WorkingHours-Afternoon-DDos.pcap_ISCX.csv\",  \"Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv\"]\n",
+    "\n",
+    "for file in L:\n",
+    "    print(file.split(\"-\")[0])\n",
+    "    day_data, day_labels = load_data(file)\n",
+    "    print(day_data.shape)\n",
+    "    test_clf(day_data, day_labels, clf)\n",
+    "    print(\"#########################\")\n",
+    "    print(\"\")\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To test"
    ]
   },
   {
