--- a/NeuralNetworks.tex
+++ b/NeuralNetworks.tex
@@ -362,8 +362,8 @@
 
     
     \hypertarget{implementation-of-neural-network-classification-on-nsl-kdd-dataset}{%
-\section{Implementation of Neural Network Classification on NSL-KDD
-Dataset}\label{implementation-of-neural-network-classification-on-nsl-kdd-dataset}}
+\section{Implementation of Neural Network Classification on IDS2017
+Dataset}\label{implementation-of-neural-network-classification-on-IDS2017-dataset}}
 
 Using Method Described in \emph{``Traffic Analysis Based Identification
 of Attacks''} found
